--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,7 @@
-input[type="date"]:required:invalid::-webkit-datetime-edit {
+::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
 	color: transparent;
-}
-input[type="date"]:focus::-webkit-datetime-edit {
-	color: black !important;
-}
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	margin: 0;
 }
 
 .form {
@@ -31,4 +23,39 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .contact_field_container {
 	width: 800px;
+}
+li {
+	list-style: none;
+}
+
+.delete_button {
+	background-color: #fff;
+	color: #000;
+	border-radius: 50%;
+	/* height: 12px; */
+	font-size: 10px;
+	padding: 1px 3px;
+	display: grid;
+	place-items: center;
+	cursor: pointer;
+}
+
+.chip {
+	display: flex;
+	gap: 5px;
+	align-items: center;
+	background-color: #828282;
+	border-radius: 2px;
+	color: #fff;
+	width: fit-content;
+	padding: 5px 5px 5px 5px;
+}
+
+.skills_list {
+	display: grid;
+	gap: 3px;
+	padding: 0;
+	margin: 0;
+	/* grid-template-columns: repeat(auto-fit, 1fr); */
+	grid-template-columns: repeat(5, 1fr);
 }
