implemented validation and  bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
 ::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
 	color: transparent;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin: 0;
+}
 
 .form {
 	width: fit-content;
