--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ input[type="number"]::-webkit-outer-spin-button {
 	margin: 0;
 }
 
+@media only screen and (max-width: 600px) {
+	.main_form_container_mobile {
+		flex-direction: row;
+	}
+}
+
 .form {
 	width: fit-content;
 	padding: 30px;
